--- a/src/assets/styles/style.css
+++ b/src/assets/styles/style.css
@@ -1,9 +1,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Blinker&display=swap');
 
 :root {
-  --background-main: rgb(255, 255, 255);
-  --text-main: rgb(0, 0, 0);
+  --background-main: rgba(255, 255, 255, 1);
+  --text-main: rgba(0, 0, 0, 1);
+
+
+  --side-menu-background-main: rgba(22, 27, 34, 1);
+  --side-menu-background-secondary: rgb(55, 60, 68);
+  --side-menu-text-main: rgb(218, 218, 218);
 }
 
 * {
