--- a/src/assets/styles/reset.css
+++ b/src/assets/styles/reset.css
@@ -41,3 +41,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Blinker&display=swap');
